# Shrub-fund

./: .gitignore  Anchor.toml  README.md  SHRB_Metadata.json  package-lock.json  package.json  resize.py  shrub_fund.ts  tsconfig.json
programs/shrub_fund/: Cargo.toml
programs/shrub_fund/src/: lib.rs
rpc-proxy/: .env.example  README.md  package.json  server.js
